--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,17 +1,15 @@
 {
   "compilerOptions": {
-
-    "baseUrl": "./", // 👈 Agregar esta línea
-    "paths": {
-      "@/*": ["src/*"]
-    },
-    
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+
+    "paths": {
+      "@/*": ["./src/*"]
+    },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
