--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "type": "module",
     "scripts": {
         "test": "jest --verbose",
-        "dev": "vite --force",
-        "build": "tsc -b && vite build",
+        "dev": "vite --force --mode development",
+        "build": "tsc -b && vite build --mode production",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview --mode production"
     },
     "dependencies": {
         "@emotion/react": "^11.14.0",
@@ -19,10 +19,13 @@
         "fuse.js": "^7.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-router": "^7.1.5",
         "tailwindcss": "^4.0.1"
     },
     "devDependencies": {
+        "@babel/plugin-transform-react-jsx": "^7.25.9",
         "@eslint/js": "^9.17.0",
+        "@sinonjs/text-encoding": "^0.7.3",
         "@testing-library/dom": "^10.4.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^16.2.0",
@@ -31,6 +34,9 @@
         "@types/react": "^19.0.8",
         "@types/react-dom": "^19.0.3",
         "@vitejs/plugin-react": "^4.3.4",
+        "babel-plugin-transform-import-meta": "^2.3.2",
+        "dotenv": "^16.4.7",
+        "esbuild-jest": "^0.5.0",
         "eslint": "^9.17.0",
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.16",
@@ -41,6 +47,8 @@
         "ts-node": "^10.9.2",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.18.2",
-        "vite": "^6.0.5"
+        "vite": "^6.0.5",
+        "vite-plugin-environment": "^1.1.3",
+        "vitest": "^3.0.6"
     }
 }
