--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES2020",
+    // "target": "ES2020",
+    "module": "esnext",
+    "target": "esnext",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    // "module": "ESNext",
     "skipLibCheck": true,
 
     "paths": {
